fix day label not showing up on mobile stylesheets

--- a/ics_calendar.sass
+++ b/ics_calendar.sass
@@ -150,6 +150,4 @@
         border-bottom: 1px solid #777
         margin-bottom: 1em
         div
-          display: inline
-        span
-          display: inline
+          display: inline !important
